# MyGraphics

./: CMakeLists.txt  main.cpp
Surface/: CMakeLists.txt  Curve.cpp  Curve.h  Mesh.cpp  Mesh.h  ScreenVT.cpp  ScreenVT.h  Surface.cpp  Surface.h
app/: Application.cpp  glApplication.cpp  glApplication.h
application/: Application.h  CMakeLists.txt  ProjectSerializer.cpp  ProjectSerializer.h  glApplication.cpp  glApplication.h
common/: AttrManager.h  CMakeLists.txt  IdManager.h
glBasic/: CMakeLists.txt  Camera.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  glDynamicObject.cpp  glDynamicObject.h  glObject.cpp  glObject.h  glTBO.cpp  glTBO.h
object/: CMakeLists.txt  DataObject.cpp  DataObject.h  object.cpp  object.h  scene.cpp  scene.h  surface.cpp  surface.h
raytrace/: BVHTree.cpp  BVHTree.h  CMakeLists.txt  RayTrace.cpp  RayTrace.h
shaders/: CMakeLists.txt  curve_default.frag  curve_default.vert  curve_default_TNB.frag  curve_default_TNB.geom  curve_default_TNB.vert  phone_default.frag  phone_default.vert  phone_default_new.frag  ray_trace.frag  ray_trace.vert  rc.cpp  rc.h  surface_default.frag  surface_default.vert  surface_default_N.frag  surface_default_N.geom  surface_default_N.vert
